<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_forecast"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/item_forecast_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/forecast_day"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/item_avgtemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:maxLines="2"
                    android:text="@string/average_temp"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/item_forecast_condition"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:maxLines="2"
                    android:text="@string/forecast_condition"
                    android:textColor="@color/blue" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>